--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@tailwindcss/postcss": "^4.0.1",
     "aws-amplify": "^6.12.2",
+    "axios": "^1.7.9",
     "framer-motion": "^12.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
