SCEN-14 Create:Bookmarks page, useBookmarks hook for adding/deleting bookmarks. Update:MovieDetails by adding bookmark btn

--- a/front-end/.env
+++ b/front-end/.env
@@ -3,3 +3,5 @@ VITE_USER_POOL_ID=eu-north-1_KHEAyaIk3
 VITE_USER_POOL_CLIENT_ID=8qidsnpda9e7084m48s22jemc
 
 VITE_APP_TMDB_API_KEY=f84b8d521380f9e362f1cc65aa90df94
+
+BOOKMARKS_STORAGE_KEY=movie_bookmarks
