--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "@tailwindcss/postcss": "^4.0.1",
     "aws-amplify": "^6.12.2",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.0.6",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
@@ -25,6 +27,7 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.4",
+    "tailwind-merge": "^3.0.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
