--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.4",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
     "zod": "^3.24.1"
   },
