--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,27 @@ services:
       - ./back_end:/usr/src/app
       - /usr/src/app/node_modules
     restart: unless-stopped
+    networks:
+      - app_network
+
+  frontend_dev:
+    container_name: sceneStream_frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    env_file:
+      - ./frontend/.env
+    volumes:
+      - ./frontend:/usr/src/app
+      - /usr/src/app/node_modules
+    depends_on:
+      - backend
+    restart: unless-stopped
+    networks:
+      - app_network
+
+networks:
+  app_network:
+    driver: bridge
