--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -77,7 +77,16 @@ jobs:
             docker run -d \
               --name scene_stream_backend \
               -p 5000:5000 \
-              --env-file ./back_end/.env \
+              -e MONGO_URI="${{ secrets.MONGO_URI }}" \
+              -e AWS_REGION="${{ secrets.AWS_REGION }}" \
+              -e AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" \
+              -e AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+              -e AWS_S3_BUCKET_NAME="${{ secrets.AWS_S3_BUCKET_NAME }}" \
+              -e COGNITO_USER_POOL_ID="${{ secrets.COGNITO_USER_POOL_ID }}" \
+              -e COGNITO_CLIENT_ID="${{ secrets.COGNITO_CLIENT_ID }}" \
+              -e TMDB_API_KEY="${{ secrets.TMDB_API_KEY }}" \
+              -e TMDB_BASE_URL="${{ secrets.TMDB_BASE_URL }}" \
+              -e API_PORT="5000" \
               ismaillf/scene_stream:latest
 
   # deploy-frontend:
