SCEN-25 Replacing netstat-nat with net-tools in Dockerfile

--- a/back_end/Dockerfile
+++ b/back_end/Dockerfile
@@ -6,17 +6,15 @@ COPY package*.json ./
 
 RUN npm install
 
-RUN npm install -g nodemon
-
 COPY . .
 
 RUN npm run build
 
-RUN apk add --no-cache netstat-nat curl
+RUN apk add --no-cache net-tools curl
 
 EXPOSE 5000
 
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost:5000/health || exit 1
+  CMD curl -f http://localhost:5000/health || exit 1
 
 CMD ["npm", "start"]
